--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
             rel="stylesheet"
         />
+        <link rel="icon" type="image/x-icon" href="/favicon.png" />
         <style>
             body,
             html {
