--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>The American Housing Corporation</title>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap"
-            rel="stylesheet"
-        />
         <link rel="icon" type="image/x-icon" href="/favicon.png" />
         <style>
             body,
@@ -15,57 +11,22 @@
                 margin: 0;
                 padding: 0;
                 height: 100%;
-                font-family: "Montserrat", sans-serif;
-                background-color: #e8e8e8;
             }
-            .content {
-                width: 100%;
+            .centered-logo {
+                display: flex;
+                justify-content: center; /* Horizontally center */
+                align-items: center; /* Vertically center */
                 height: 100%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                background-color: #94a596;
-                color: #ffffff;
             }
-            .text-container {
-                border: 1px solid #ffffff;
-                border-radius: 5px;
-                padding: 100px;
-                text-align: left;
-                margin-top: auto;
-            }
-            h2 {
-                font-weight: 600;
-                margin: 0;
-                font-size: 2.5em;
-            }
-            .stars {
-                margin-top: auto;
-                margin-bottom: 50px;
-                text-align: center;
-                display: flex;
-                gap: 10px;
-            }
-            @media (max-width: 768px) {
-                h2 {
-                    font-size: 1.5em;
-                }
-                .text-container {
-                    padding: 50px;
-                }
+            .centered-logo img {
+                height: 200px; /* Scale down the logo to 200px height */
+                width: auto; /* Maintain aspect ratio */
             }
         </style>
     </head>
     <body>
-        <div class="content">
-            <div class="text-container">
-                <h2>The American<br />Housing Corporation</h2>
-            </div>
-            <div class="stars">
-                <div class="star">★</div>
-                <div class="star">★</div>
-                <div class="star">★</div>
-            </div>
+        <div class="centered-logo">
+            <img src="/logo.png" alt="The American Housing Corporation Logo" />
         </div>
     </body>
 </html>
