Add media query for mobile.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
                 height: 200px; /* Scale down the logo to 200px height */
                 width: auto; /* Maintain aspect ratio */
             }
+
+            @media (max-width: 600px) {
+                .centered-logo img {
+                    height: 100px; /* Set a smaller height for mobile devices */
+                }
+            }
         </style>
     </head>
     <body>
