--- a/positions/engineering.html
+++ b/positions/engineering.html
@@ -66,6 +66,13 @@
                 font-weight: thin;
                 margin-top: -5px;
             }
+            /* Add side padding on mobile devices */
+            @media only screen and (max-width: 600px) {
+                .container {
+                    padding-left: 16px;
+                    padding-right: 16px;
+                }
+            }
         </style>
     </head>
     <body>
