Update title in posting.

--- a/positions/cyOZ39.html
+++ b/positions/cyOZ39.html
@@ -106,9 +106,9 @@
             </p>
 
             <p>
-                As a mechanical engineer on the Build System Engineering team,
-                you will play a key role in the design and manufacturing of our
-                build system — a proprietary kit-of-parts for building
+                As a senior mechanical engineer on the Build System Engineering
+                team, you will play a key role in the design and manufacturing
+                of our build system — a proprietary kit-of-parts for building
                 high-quality multifamily housing.
             </p>
 
