Head of Manufacturing

--- a/positions/engineering.html
+++ b/positions/engineering.html
@@ -83,10 +83,7 @@
         <img src="/logo.png" alt="The American Housing Corporation Logo" />
       </div>
 
-      <h1 style="margin-top: 60px">
-        Head of Engineering<br />
-        <span class="subtitle">Build System Design & Manufacturing</span>
-      </h1>
+      <h1 style="margin-top: 60px">Head of Manufacturing Engineering<br /></h1>
 
       <p class="location" style="margin-top: -5px; color: #666">Austin, TX</p>
 
