--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>The American Housing Corporation</title>
-        <link rel="icon" type="image/x-icon" href="/favicon.png" />
-        <style>
-            body,
-            html {
-                margin: 0;
-                padding: 0;
-                height: 100%;
-            }
-            .centered-logo {
-                display: flex;
-                justify-content: center; /* Horizontally center */
-                align-items: center; /* Vertically center */
-                height: 100%;
-            }
-            .centered-logo img {
-                height: 200px; /* Scale down the logo to 200px height */
-                width: auto; /* Maintain aspect ratio */
-            }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The American Housing Corporation</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
+    <style>
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
+      .centered-logo {
+        display: flex;
+        justify-content: center; /* Horizontally center */
+        align-items: center; /* Vertically center */
+        height: 100%;
+      }
+      .centered-logo img {
+        height: 200px; /* Scale down the logo to 200px height */
+        width: auto; /* Maintain aspect ratio */
+      }
 
-            @media (max-width: 600px) {
-                .centered-logo img {
-                    height: 120px; /* Set a smaller height for mobile devices */
-                }
-            }
-        </style>
-    </head>
-    <body>
-        <div class="centered-logo">
-            <img src="/logo.png" alt="The American Housing Corporation Logo" />
-        </div>
-    </body>
+      @media (max-width: 600px) {
+        .centered-logo img {
+          height: 120px; /* Set a smaller height for mobile devices */
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="centered-logo">
+      <img src="/logo.png" alt="The American Housing Corporation" />
+    </div>
+  </body>
 </html>
